# gemini1

./: .gitignore  CLAUDE.md  firehose_capture.jsonl  main.py  pyproject.toml
.gemini/: settings.json
.github/workflows/: prd.md.py  prd2.md
data/: firehose.db
src/: firehose_capture.jsonl
src/blueskyfolder/: .env.example  .gitignore  README.md  __init__.py  __main__.py  pyproject.toml
src/blueskyfolder/Project Documentation/: setting_up_bluesky.md
src/blueskyfolder/bluesky/: agent_cli.py  config.py  index.py  ingest.py  main.py  view_posts.py
src/data/: firehose.db
